--- a/skin product landing page.html
+++ b/skin product landing page.html
@@ -46,7 +46,7 @@
             <img src="https://i.postimg.cc/kMNz5grj/flower.png" alt="Pixel Skincare">
         </div>
         <div class="hero-text">
-            <h1>Your Skin</br> Would Loved It!</h1>
+            <h1>Your Skin</br> Would Loved It!!!!</h1>
             <a href="#featured" class="btn">Explore</a>
         </div>
     </div>
